--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "actualization",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ahtesham127.github.io/actualization/",
+  "homepage": "https://ahtesham127.github.io/actualization/build",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
