--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-fullpage": "^0.1.19",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
@@ -23,7 +23,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-   
   },
   "eslintConfig": {
     "extends": [
