--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^4.0.0",
+    "pushin": "^5.1.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-fullpage": "^0.1.19",
